hoan thien 90% BE

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,9 @@ SMTP_PORT=587
 SMTP_USERNAME=email-server-username
 SMTP_PASSWORD=email-server-password
 EMAIL_FROM=support@yourapp.com
+
+# Cloudinary configuration for file uploads
+# Sign up at https://cloudinary.com to get your credentials
+CLOUDINARY_CLOUD_NAME=your-cloud-name
+CLOUDINARY_API_KEY=your-api-key
+CLOUDINARY_API_SECRET=your-api-secret
