--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "pm2": "^5.1.0",
+    "puppeteer": "^24.31.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3",
     "validator": "^13.0.0",
