--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Port number
 PORT=3000
 
+# Timezone
+TZ=Asia/Ho_Chi_Minh
+
 # URL of the Mongo DB
 MONGODB_URL=mongodb://127.0.0.1:27017/node-boilerplate
 
